# genome-downsampler

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_dev.md  flake.nix  lint.sh  run_eff_test.sh  run_m_test.sh  useful_links.md
.cache/clangd/index/: main.cpp.CD7D22ABA0EAE2F9.idx
.github/workflows/: clang-format-check.yml  clang-tidy.yml  cmake-multi-platform.yml  ubuntu.yml
cmake/: FindHTSlib.cmake  LibFindMacros.cmake  deps_fetcher.cmake  generate_clangd_file.cmake
libs/: CMakeLists.txt
libs/bam-api/: CMakeLists.txt
libs/bam-api/include/bam-api/: amplicon.hpp  amplicon_set.hpp  amplicons.hpp  aos_paired_reads.hpp  bam_api.hpp  bam_api_config.hpp  bam_api_config_builder.hpp  bam_data.hpp  bam_paired_reads.hpp  paired_reads.hpp  read.hpp  soa_paired_reads.hpp
libs/bam-api/src/: amplicon.cpp  amplicon_set.cpp  aos_paired_reads.cpp  bam_api.cpp  bam_api_config_builder.cpp  paired_reads.cpp  read.cpp  soa_paired_reads.cpp
libs/bicgstab/: CMakeLists.txt
libs/bicgstab/include/bicgstab/: bicgstab.hpp  helper_cuda.h  helper_cusolver.h  helper_string.h  mmio.h  mmio_wrapper.h
libs/bicgstab/src/: bicgstab.cpp
libs/cg/: CMakeLists.txt
libs/cg/include/cg/: cg.hpp
libs/cg/src/: cg.cpp
libs/logging/: CMakeLists.txt
libs/logging/include/logging/: log.hpp
libs/logging/src/: log.cpp
libs/qmcp-solver/: CMakeLists.txt
libs/qmcp-solver/include/qmcp-solver/: check_cuda_error.hpp  conjugate_gradient_solver.hpp  cpu_crawling_solver.hpp  cpu_mixed_integer_solver.hpp  cuda_helpers.cuh  cuda_helpers.hpp  cuda_max_flow_solver.hpp  linear_programming_solver.hpp  logger.hpp  mcp_cpu_circulation_solver.hpp  mcp_cpu_cost_scaling_solver.hpp  mcp_cpu_crawling_solver.hpp  network_graph.hpp  qmcp-solver.hpp  qmcp_cpu_circulation_solver.hpp  qmcp_cpu_cost_scaling_solver.hpp  qmcp_linear_programming_solver.hpp  quasi_mcp_cpu_max_flow_solver.hpp  quasi_mcp_cuda_max_flow_solver.hpp  sequence_network_solver.hpp  sequential_cost_scaling_network_solver.hpp  sequential_cycle_canceling_network_solver.hpp  sequential_max_flow_solver.hpp  solution.hpp  solver.hpp  test_solver.hpp
libs/qmcp-solver/src/: conjugate_gradient_solver.cpp  cpu_crawling_solver.cpp  cpu_mixed_integer_solver.cpp  cuda_max_flow_solver.cu  linear_programming_solver.cpp  logger.cpp  mcp_cpu_circulation_solver.cpp  mcp_cpu_cost_scaling_solver.cpp  mcp_cpu_crawling_solver.cpp  mcp_gpu_accelerated_mixed_integer_solver.cu  qmcp_cpu_circulation_solver.cpp  qmcp_cpu_cost_scaling_solver.cpp  qmcp_linear_programming_solver.cpp  quasi_mcp_cpu_max_flow_solver.cpp  quasi_mcp_cuda_max_flow_solver.cu  sequence_network_solver.cpp  sequential_cost_scaling_network_solver.cpp  sequential_cycle_canceling_network_solver.cpp  sequential_cycle_canceling_network_solver.cpp.cpp  sequential_max_flow_solver.cpp  test_solver.cpp
libs/reads-gen/: CMakeLists.txt
libs/reads-gen/include/: reads_gen.hpp
libs/reads-gen/src/: reads_gen.cpp
libs/sample-data-generator/: CMakeLists.txt
libs/sample-data-generator/include/sample-data-generator/: sample_data_generator.hpp
libs/sample-data-generator/src/: sample_data_generator.cpp
outputs/coverage_comparison_quasi_mcp_vs_mcp/: compare.py
outputs/coverage_comparison_quasi_mcp_vs_mcp/coverage/mcp-cpu/: random_with_hole_test.cov  real_dataset_1_m_1000.cov  real_dataset_1_m_2000.cov
outputs/coverage_comparison_quasi_mcp_vs_mcp/coverage/quasi-mcp-cpu/: random_with_hole_test.cov  real_dataset_1_m_1000.cov  real_dataset_1_m_2000.cov
outputs/efficiency_comparison/: eff_to_distribution_type.py  eff_to_test_group.py
outputs/efficiency_comparison/results/mcp-cpu/: results.csv
outputs/efficiency_comparison/results/qmcp-cpu/: results.csv
outputs/efficiency_comparison/results/quasi-mcp-cpu/: results.csv
outputs/efficiency_comparison/results/quasi-mcp-cuda/: results.csv
outputs/hardware_comparison/: efficiency_test_plot.py
outputs/hardware_comparison/alpha/mcp-cpu/: results.csv
outputs/hardware_comparison/alpha/qmcp-cpu/: results.csv
outputs/hardware_comparison/alpha/quasi-mcp-cpu/: results.csv
outputs/hardware_comparison/alpha/quasi-mcp-cuda/: results.csv
outputs/hardware_comparison/beta/mcp-cpu/: results.csv
outputs/hardware_comparison/beta/qmcp-cpu/: results.csv
outputs/hardware_comparison/beta/quasi-mcp-cpu/: results.csv
outputs/hardware_comparison/beta/quasi-mcp-cuda/: results.csv
outputs/hardware_comparison/gamma/mcp-cpu/: results.csv
outputs/hardware_comparison/gamma/qmcp-cpu/: results.csv
outputs/hardware_comparison/gamma/quasi-mcp-cpu/: results.csv
outputs/hardware_comparison/gamma/quasi-mcp-cuda/: results.csv
outputs/m_efficiency_comparison/: m_test_plot.py
outputs/m_efficiency_comparison/m_test/efficiency/mcp-cpu/: results.csv
outputs/m_efficiency_comparison/m_test/efficiency/qmcp-cpu/: results.csv
outputs/m_efficiency_comparison/m_test/efficiency/quasi-mcp-cpu/: results.csv
outputs/m_efficiency_comparison/m_test/efficiency/quasi-mcp-cuda/: results.csv
scripts/: install_dependencies_ubuntu.sh  install_libs.sh  run-clang-tidy.py  run-clang-tidy.sh
scripts/actions/: install_cuda_ubuntu.sh  install_dependencies_ubuntu.sh  run-clang-tidy.py  run-clang-tidy.sh
src/: CMakeLists.txt  app.cpp  app.hpp  config.h.in  helpers.hpp  linear_programming_tests.hpp  main.cpp  main.cu  sequential_max_flow_test.hpp  solver_factory_functions.cpp  solver_factory_functions.hpp  solver_manager.hpp  test.cu  test_command.cpp  test_command.hpp  tester_manager.hpp
src/tests/: CMakeLists.txt  conjugate_gradient_test.hpp  coverage_tester.cpp  coverage_tester.hpp  efficiency_tester.cpp  efficiency_tester.hpp  scoped_timer.hpp  sequential_max_flow_test.hpp  solver_tester.hpp  test_helpers.hpp
